deployment-student-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-api
  namespace: test
  labels:
    app: student-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-api
  template:
    metadata:
      labels:
        app: student-api
    spec:
      containers:
        - name: student-api
          image: shinejkk/student-api
          ports:
            - containerPort: 8080
