service-student-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-api
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: student-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
