service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-ui
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: student-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
