ingress-student-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-api
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - student-api.shinejohnk.xyz
      secretName: student-api-tls
  rules:
    - host: student-api.shinejohnk.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-api
                port:
                  number: 8080
